# dr-peste-redux

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-16-discord-poe2-price-bot.md  2026-06-17-rare-item-pricing-stage1.md  2026-06-18-per-member-poe-sessions.md  2026-06-18-rare-pricing-craftability-followups.md  2026-06-18-rare-pricing-craftability.md  2026-06-19-rare-pricing-marginal-contribution.md  2026-06-19-trade2-rate-limit-throttle.md  2026-06-22-harvest-warmup-phase3.md  2026-06-22-market-learning-phase4.md  2026-06-22-observation-corpus-phase2.md  2026-06-22-pricing-heuristic-phase1.md  2026-06-24-corpus-filter-and-sub1div-floor.md  2026-06-24-honest-eval-harness.md  2026-06-24-valuemodel-predictive-redesign.md  2026-06-25-range-fallback-abstention.md  2026-06-30-currency-arbitrage-phase1.md
docs/superpowers/specs/: 2026-06-16-discord-poe2-price-bot-design.md  2026-06-17-rare-item-pricing-stage1-design.md  2026-06-17-rare-item-pricing-stage1.5-design.md  (+12 more)
src/: config.rs  itemtext.rs  main.rs  observe.rs  pricelog.rs  store.rs
src/arb/: graph.rs  mod.rs  model.rs  source.rs  spread.rs
src/discord/: arb.rs  embeds.rs  farm.rs  harvest.rs  help.rs  insights.rs  logout.rs  mod.rs  paste.rs  price.rs  pricecheck.rs
src/poeninja/: categories.rs  mod.rs  model.rs
src/trade/: ablation.rs  age.rs  categories.rs  client.rs  hedonic.rs  limiter.rs  mod.rs  model.rs  pseudo.rs  quality.rs  query.rs  rates.rs  session.rs  stats.rs  value.rs
src/trade/value/: mod.rs  (+5 more)
(+7 files in other folders)
