[package]
name = "dr-peste-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
fuzzy-matcher = "0.3"
futures = "0.3"
async-trait = "0.1"
percent-encoding = "2"
secrecy = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
